<resources>
    <string name="app_name">Baladna</string>
    <string name="welcome_backe">Welcome Back !</string>
    <string name="add_image">Add image</string>
    <string name="select_user">Select user</string>
    <string name="city">City</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="link1" translatable="false">"https://www.alhadath.ps/"</string>
    <string name="link2" translatable="false">"https://www.noor-book.com/"</string>
    <string name="link3" translatable="false">"https://ar.wikipedia.org/wiki/%D8%A7%D9%84%D8%B5%D9%81%D8%AD%D8%A9_%D8%A7%D9%84%D8%B1%D8%A6%D9%8A%D8%B3%D9%8A%D8%A9"</string>
    <string name="sity" translatable="false">شو قالت ستي</string>
    <string name="shuhadaa" translatable="false">الشهداء</string>
    <string name="post">Posts</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="type_a_message">Write a message</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="login_to_continue">Login</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="you_have_account">You have account?</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="create_new_account">Create new account</string>
    <string name="to_reset_password_enter_your_email_press_the_button_and_check_mail_to_follow_instruction">To reset password, enter your email, press the button and check mail to follow instruction.</string>
    <string name="reset_password">Reset Password</string>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="more">More</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="fake_like_count">13 Likes</string>
    <string name="fake_comment_count">3 Comments</string>
    <string name="like_count">%d Like</string>
    <string name="likes_count">%d Likes</string>
    <string name="no_likes_yet">Be first like</string>

    <string name="comment_count">%d Comment</string>
    <string name="comments_count">%d Comments</string>

    <string name="profile">Profile</string>
    <string name="comments">Comments</string>
    <string name="somthing_wrong">Something wont wrong, please try again later</string>
    <string name="trad_pal">Palestine heritage</string>
    <string name="posting">Posting</string>
    <string name="gallery">Gallery</string>
    <string name="palestine">Palestine</string>
    <string name="books_about_pal">Books about Palestine</string>
    <string name="resources">Resources</string>
    <string name="about">About app</string>
    <string name="martyrs">The names of the martyrs</string>
    <string name="photos">Photos</string>
    <string name="most_fam">The Palestinian villages</string>
    <string name="landmarks">Landmarks</string>
    <string name="famous_families">The most famous families</string>
    <string name="martyrs_name">Martyrs name</string>
    <string name="show_more">Show more</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="change_name">Change Name</string>
    <string name="fake_user_location">Location : Gaza</string>
    <string name="title_activity_about_palestine">AboutPalestineActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lorem">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="small1_lorem">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </string>
    <string name="small2_lorem">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\',  </string>
    <string name="small3_lorem">making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). </string>

    <string name="historical_data">Historical Data</string>
    <string name="economic_data">Economic Data</string>
    <string name="geo_data">Geo Data</string>
    <string name="villages">The Palestinian villages</string>
    <string name="traditions">Traditions</string>
    <string name="about_palestine">About Palestine</string>
    <string name="other">Other</string>
    <string name="change">Change</string>
    <string name="change_your_name">Change your name</string>
    <string name="not_ready">Not implemented yet!!</string>
    <string name="logging_out">Logging out …</string>

    <string name="error_field_empty">This field can\'t be empty</string>
    <string name="error_passwords_not_match">Passwords doesn\'t match</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="quotation" translatable="false">شو قالت ستى</string>
    <string name="no_whatsapp">Whatsapp have not been installed.</string>
    <string name="copied_to_clip">Copied to Clipboard</string>

</resources>