<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reset_password_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_46sdp"
        android:padding="10dp"
        android:text="@string/reset_password"
        android:textSize="@dimen/_20ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/to_reset_password_enter_your_email_press_the_button_and_check_mail_to_follow_instruction"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/edtResetEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/background_input"
        android:hint="@string/email"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textAlignment="viewStart"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13sdp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"

        app:cornerRadius="@dimen/_8sdp" />


    <Button
        android:visibility="gone"
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:text="BACK"
        android:textColor="@android:color/holo_blue_dark" />

</LinearLayout>